force-app/main/default/objects/SurveyTemplateAccesses__c/SurveyTemplateAccesses__c.object-meta.xml
<CustomObject>
    <label>Survey Template Access</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SurveyTemplateAccesses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Template Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>