force-app/main/default/objects/SurveyTemplateAccesses__c/fields/OnlyLeaders__c.field-meta.xml
<CustomField>
    <fullName>OnlyLeaders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Leaders</label>
    <type>Checkbox</type>
</CustomField>