force-app/main/default/objects/SurveyTemplateAccesses__c/fields/SurveyTemplate__c.field-meta.xml
<CustomField>
    <fullName>SurveyTemplate__c</fullName>
    <label>Survey Template</label>
    <referenceTo>SurveyTemplate__c</referenceTo>
    <relationshipLabel>Survey Template Accesses</relationshipLabel>
    <relationshipName>SurveyTemplateAccesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>