force-app/main/default/objects/SurveyTemplateAccesses__c/validationRules/ContactAndLeadersCannotBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactAndLeadersCannotBeEmpty</fullName>
    <active>true</active>
    <description>Contact and leaders cannot be empty</description>
    <errorConditionFormula>IF(AND(ISBLANK( Contact__c ), OnlyLeaders__c = FALSE), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Please fill only Contact or Only Leaders input.</errorMessage>
</ValidationRule>