force-app/main/default/objects/SurveyTemplateAccesses__c/validationRules/ContactAndLeadersCannotBeFill.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactAndLeadersCannotBeFill</fullName>
    <active>true</active>
    <description>Contact and leaders cannot be filled</description>
    <errorConditionFormula>IF(AND(!ISBLANK( Contact__c ), OnlyLeaders__c = TRUE), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Please fill only Contact or Only Leaders input.</errorMessage>
</ValidationRule>